--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,8 +2,8 @@ Package: jbedgar
 Type: Package
 Title: Access SEC EDGAR API
 Version: 0.1.0
-Author: Joseph Bennett <joeybennett9@hotmail.com>
-Maintainer: Joseph Bennett <joeybennett9@hotmail.com>
+Author: Joseph Bennett <jbennett@jbennettconsulting.com>
+Maintainer: Joseph Bennett <jbennett@jbennettconsulting.com>
 Depends: R (>= 2.4.0)
 Description: This package will help in the retrival fo SEC Edgar Corporate
   Filing documents.
